[package]
name = "sakihomebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.10", features = ["macros", "auto-send"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread"] }
dotenv = "0.15"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.4"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
